tests/custom/STARIS_2022/operation-type-errors/in-type-error-01/stderr.expected
Error:
    Parser error in file: in-type-error.essence Error is:
ValidatorError in-type-error.essence:2:16:
  |
2 | such that b = (false in {1, 2, 3})
  |                ^^^^^
Type error:
	Expected: int
	Got: bool

